United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6933846 GCC 4.5 warning removals
6933846 : GCC 4.5 warning removals

Details
Type:
Bug
Submit Date:
2010-03-10
Status:
Resolved
Updated Date:
2010-10-15
Project Name:
JDK
Resolved Date:
2010-03-11
Component:
hotspot
OS:
generic
Sub-Component:
build
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
OpenJDK6

Related Reports
Backport:

Sub Tasks

Description
Fixes related to getting rid of warning errors when using GCC 4.5

http://cr.openjdk.java.net/~ptisnovs/Gcc4.5Errors1/

This simple patch fixes compile failure when -Wall -Werror flags are  
used under gcc 4.5.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk6/jdk6/hotspot/rev/5a144515dcd0
                                     
2010-03-11
EVALUATION

See description.
                                     
2010-03-10



Hardware and Software, Engineered to Work Together