6933846: GCC 4.5 warning removals Summary: fixes compile failure when -Wall -Werror flags are used under gcc 4.5 Reviewed-by: ohair